force-app/main/default/objects/Pricing_Rule__c/Pricing_Rule__c.object-meta.xml
<CustomObject>
    <label>Pricing Rule</label>
    <nameField>
        <displayFormat>PR-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pricing Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>