force-app/main/default/objects/Pricing_Rule__c/fields/Builder_Market_Account__c.field-meta.xml
<CustomField>
    <fullName>Builder_Market_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Builder Market Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pricing Rules</relationshipLabel>
    <relationshipName>Pricing_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>