force-app/main/default/objects/Pricing_Rule__c/fields/Crew_Hours_Per_Item__c.field-meta.xml
<CustomField>
    <fullName>Crew_Hours_Per_Item__c</fullName>
    <description>Labor hours required per unit for a 3-man crew</description>
    <label>Crew Hours Per Item (3-Man)</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>