force-app/main/default/objects/Pricing_Rule__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this pricing rule is currently active</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>