force-app/main/default/objects/Pricing_Rule__c/fields/Item_Category__c.field-meta.xml
<CustomField>
    <fullName>Item_Category__c</fullName>
    <description>Category: Labor Schedule, BMG Rate, or Cost Book</description>
    <label>Item Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Labor Schedule</fullName>
            </value>
            <value>
                <fullName>BMG Rate</fullName>
            </value>
            <value>
                <fullName>Cost Book</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>