force-app/main/default/objects/Pricing_Rule__c/fields/Item_Name__c.field-meta.xml
<CustomField>
    <fullName>Item_Name__c</fullName>
    <description>Labor or material item name for pricing lookup</description>
    <label>Item Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>