force-app/main/default/objects/Pricing_Rule__c/fields/Material_Cost__c.field-meta.xml
<CustomField>
    <fullName>Material_Cost__c</fullName>
    <description>Material cost per unit for this pricing rule</description>
    <label>Material Cost</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>