force-app/main/default/objects/Pricing_Rule__c/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <description>Total rate per unit (labor + material)</description>
    <label>Rate</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>