force-app/main/default/objects/Pricing_Rule__c/fields/Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>Rate_Type__c</fullName>
    <description>Category of pricing rule: Sod per SqFt, Tree Each, Labor Schedule, etc.</description>
    <label>Rate Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sod_Per_SqFt</fullName>
                <default>true</default>
                <label>Sod_Per_SqFt</label>
            </value>
            <value>
                <fullName>Tree_Each</fullName>
            </value>
            <value>
                <fullName>Temp_Irrigation</fullName>
            </value>
            <value>
                <fullName>Plant_Each</fullName>
            </value>
            <value>
                <fullName>Labor Schedule</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>