force-app/main/default/objects/Pricing_Rule__c/fields/UOM__c.field-meta.xml
<CustomField>
    <fullName>UOM__c</fullName>
    <description>Unit of measure (Each, SqFt, Bag, etc.)</description>
    <label>Unit of Measure</label>
    <length>50</length>
    <type>Text</type>
</CustomField>